test/sema/typeck/module/super-no-parent.dora
fn f() { super::bar(); }

//====================
// error: no super module.
// --> super-no-parent.dora:1:10
//  | fn f() { super::bar(); }
//             ~~~~~
//  | 
// 1 error found.
